Adding MSS on JBoss 5 binary release
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4232 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,18 @@
 				<module>sip-servlets-jboss5</module>				
 			</modules>			
 		</profile>
+		<profile>			
+			<id>jboss-distro</id>
+			<modules>				
+				<module>sip-servlets-tomcat-jboss4</module>				
+			</modules>			
+		</profile>
+		<profile>			
+			<id>jboss-5-distro</id>
+			<modules>				
+				<module>sip-servlets-jboss5</module>				
+			</modules>			
+		</profile>
 	</profiles>
 	<!-- repositories -->
 	<repositories>
