Adding back the security valve but without the SecurityActions
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4305 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-jboss5/pom.xml
+++ b/sip-servlets-jboss5/pom.xml
@@ -53,6 +53,13 @@
 			<systemPath>${basedir}/lib/jboss-web-service-5.0.0.GA.jar</systemPath>
 		</dependency>
 		
+		<!--dependency>
+			<groupId>org.jboss.jbossas</groupId>
+			<artifactId>jboss-as-tomcat</artifactId>
+			<version>${jboss.version}</version>
+			<scope>provided</scope>
+		</dependency-->
+		
 		<dependency>
 			<groupId>org.jboss.jbossas</groupId>
 			<artifactId>jboss-web-deployer</artifactId>
