adding 2 new props to the lb configuration file
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4375 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/sipp-scenarios/clustering/lb-configuration.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/clustering/lb-configuration.properties
@@ -1,6 +1,9 @@
 host=127.0.0.1
 internalPort=5065
 externalPort=5060
+#LB internals configuration
+rmiRegistryPort=2000
+jmxHtmlAdapterPort=8000
 #JSIP stack configuration
 javax.sip.STACK_NAME=SipBalancerForwarder
 javax.sip.AUTOMATIC_DIALOG_SUPPORT=off
