--- a/sip-servlets-jboss5/.classpath
+++ b/sip-servlets-jboss5/.classpath
@@ -162,5 +162,6 @@
 	<classpathentry kind="var" path="M2_REPO/wutka-dtdparser/dtdparser121/1.2.1/dtdparser121-1.2.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-impl"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-annotations"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
