--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -17,6 +17,12 @@
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
 			<version>1.1.8-SNAPSHOT</version>			
+		</dependency>		
+
+		<dependency>
+			<groupId>org.mobicents.servlet.sip</groupId>
+			<artifactId>sip-servlets-annotations</artifactId>
+			<version>0.8-SNAPSHOT</version>			
 		</dependency>
 
 		<!-- logging dependency -->
