--- a/sip-servlets-jboss5/pom.xml
+++ b/sip-servlets-jboss5/pom.xml
@@ -35,7 +35,14 @@
 			<artifactId>sip-servlets-spec</artifactId>
 			<version>1.1.8-SNAPSHOT</version>
 			<scope>provided</scope>
-		</dependency>				
+		</dependency>
+		
+		<dependency>
+			<groupId>org.mobicents.servlet.sip</groupId>
+			<artifactId>sip-servlets-annotations</artifactId>
+			<version>0.8-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>					
 		
 		<dependency>
 			<groupId>commons-logging</groupId>
