--- a/sip-servlets-test-suite/.classpath
+++ b/sip-servlets-test-suite/.classpath
@@ -47,5 +47,6 @@
 	<classpathentry kind="var" path="M2_REPO/javax/sip/jain-sip-ri/1.2.89/jain-sip-ri-1.2.89.jar" sourcepath="/JAIN-SIP_HOME/src"/>
 	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.12/log4j-1.2.12.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-tomcat-jboss4"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sip-servlets-annotations"/>
 	<classpathentry kind="output" path="testsuite/target/test-classes"/>
 </classpath>
