Fixing the deployment of annotations project for jb5
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4387 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-annotations/pom.xml
+++ b/sip-servlets-annotations/pom.xml
@@ -98,6 +98,7 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/${node}/deployers/jbossweb.deployer/" />
 										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/${node}/deploy/jbossweb.sar/" />
 									</tasks>
 								</configuration>
@@ -176,6 +177,7 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/${node}/deployers/jbossweb.deployer/" />
 										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/${node}/deploy/jbossweb.sar/" />
 									</tasks>
 								</configuration>
