Fixing management console to import the annotations project
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4388 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-management/pom.xml
+++ b/sip-servlets-management/pom.xml
@@ -134,6 +134,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
+			<artifactId>sip-servlets-annotations</artifactId>
+			<version>0.8-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-impl</artifactId>
 			<version>0.8-SNAPSHOT</version>
 			<scope>provided</scope>
