moving to jain sip version 1.2.90
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4484 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
 	<properties>
 		<!-- MOBICENTS TOOL VERSIONS -->
 		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.BETA2</mobicents.tools.mavenplugin.eclipse.version>
+		<jain-sip-ri.version>1.2.90</jain-sip-ri.version>
 	</properties>
 	
 	<dependencies>
