--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -277,7 +277,10 @@
 	
 	<target name="build-mobicents-media-server-2.x" depends="get-deps">
 		<echo>Building Mobicents Media Server 2.x</echo>
-		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/target/dependencies/media/core/2.x">
+		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/target/dependencies/media/2.x/core">
+			<arg line="clean install -P set-svn-revision -Djboss.home=${jboss.home} -Dnode=${jboss.config}" />
+		</exec>
+		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/target/dependencies/media/2.x/controllers/msc/msc-stack">
 			<arg line="clean install -P set-svn-revision -Djboss.home=${jboss.home} -Dnode=${jboss.config}" />
 		</exec>
 	</target>
