commenting MMS 2.X until it's ironed out
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4491 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -108,10 +108,10 @@
 					<property name="jboss-5.home" value="${jboss-5.home}"/>
 					<property name="jboss.config" value="@{jboss.config}"/>
 				</ant>				
-				<ant dir="${base.path}" antfile="build.xml" target="build-mobicents-media-server-2.x">
+				<!--ant dir="${base.path}" antfile="build.xml" target="build-mobicents-media-server-2.x">
 					<property name="jboss.home" value="${jboss.home}"/>
 					<property name="jboss.config" value="@{jboss.config}"/>
-				</ant>
+				</ant-->
 				<!-- Commented out because they don't run on JB5 yet -->
 				<!--ant dir="${base.path}" antfile="build.xml" target="build-mobicents-diameter-core">
 					<property name="jboss.home" value="${jboss.home}"/>
