--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -108,10 +108,10 @@
 					<property name="jboss-5.home" value="${jboss-5.home}"/>
 					<property name="jboss.config" value="@{jboss.config}"/>
 				</ant>				
-				<!--ant dir="${base.path}" antfile="build.xml" target="build-mobicents-media-server-2.x">
+				<ant dir="${base.path}" antfile="build.xml" target="build-mobicents-media-server-2.x">
 					<property name="jboss.home" value="${jboss.home}"/>
 					<property name="jboss.config" value="@{jboss.config}"/>
-				</ant-->
+				</ant>
 				<!-- Commented out because they don't run on JB5 yet -->
 				<!--ant dir="${base.path}" antfile="build.xml" target="build-mobicents-diameter-core">
 					<property name="jboss.home" value="${jboss.home}"/>
@@ -276,8 +276,11 @@
 	</target>
 	
 	<target name="build-mobicents-media-server-2.x" depends="get-deps">
-		<echo>Building Mobicents Media Server 2.x</echo>
+		<echo>Building Mobicents Media Server 2.x</echo>		
 		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/target/dependencies/media/2.x/core">
+			<arg line="clean install -P set-svn-revision -Djboss.home=${jboss.home} -Dnode=${jboss.config}" />
+		</exec>
+		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/target/dependencies/media/2.x/controllers/">
 			<arg line="clean install -P set-svn-revision -Djboss.home=${jboss.home} -Dnode=${jboss.config}" />
 		</exec>
 		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/target/dependencies/media/2.x/controllers/msc/msc-stack">
