--- a/sip-servlets-seam/entrypoint/pom.xml
+++ b/sip-servlets-seam/entrypoint/pom.xml
@@ -154,6 +154,15 @@
 
 			<version>${seam.version}</version>
 		</dependency>
+		<dependency>
+
+			<groupId>javax.faces</groupId>
+
+			<artifactId>jsf-api</artifactId>
+
+			<version>1.2_12</version>
+		</dependency>
+		
 	</dependencies>
 
 </project>
