--- a/sip-servlets-examples/shopping-demo/business/pom.xml
+++ b/sip-servlets-examples/shopping-demo/business/pom.xml
@@ -134,7 +134,7 @@
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam</artifactId>
-			<version>2.0.2.GA</version>
+			<version>2.1.1.GA</version>
 			<scope>provided</scope>
 		</dependency>	
 		<dependency>
@@ -281,4 +281,59 @@
 			</testResource>
 		</testResources>
 	</build>
+	<profiles>
+		<profile>		
+			<id>jboss</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>				
+			<build>			
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<version>1.1</version>
+						<executions>
+							<execution>
+								<phase>process-resources</phase>
+								<configuration>
+									<tasks>
+										<copy verbose="true" file="${basedir}/config/ShoppingDemo-ds.xml" todir="${project.build.outputDirectory}" />										
+									</tasks>
+								</configuration>
+								<goals>
+									<goal>run</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>					
+				</plugins>
+			</build>
+		</profile>
+		<profile>		
+			<id>jboss-5</id>			
+			<build>			
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<version>1.1</version>
+						<executions>
+							<execution>
+								<phase>process-resources</phase>
+								<configuration>
+									<tasks>
+										<copy verbose="true" file="${basedir}/config/ShoppingDemo-ds.xml" todir="${env.JBOSS_HOME}/server/${node}/deploy/" />										
+									</tasks>
+								</configuration>
+								<goals>
+									<goal>run</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>					
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
