--- a/sip-servlets-examples/shopping-demo/ear/pom.xml
+++ b/sip-servlets-examples/shopping-demo/ear/pom.xml
@@ -13,7 +13,7 @@
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam</artifactId>
-			<version>${jboss-seam.version}</version>
+			<version>2.1.1.GA</version>
 			<exclusions>
 				<exclusion>
 					<groupId>jboss</groupId>
@@ -32,9 +32,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.jboss.seam</groupId>
+			<groupId>org.jboss.el</groupId>
 			<artifactId>jboss-el</artifactId>
-			<version>${jboss-el.version}</version>
+			<version>2.0.2.CR1</version>
 			<exclusions>
 				<exclusion>
 					<groupId>javax.el</groupId>
@@ -276,7 +276,7 @@
 							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
-							<groupId>org.jboss.seam</groupId>
+							<groupId>org.jboss.el</groupId>
 							<artifactId>jboss-el</artifactId>
 							<bundleDir>APP-INF/lib</bundleDir>
 							<includeInApplicationXml>true</includeInApplicationXml>
