--- a/sip-servlets-examples/shopping-demo/web/pom.xml
+++ b/sip-servlets-examples/shopping-demo/web/pom.xml
@@ -62,12 +62,12 @@
 		<dependency>
 			<groupId>com.sun.facelets</groupId>
 			<artifactId>jsf-facelets</artifactId>
-			<version>1.1.11</version>
+			<version>1.1.15.B1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-debug</artifactId>
-			<version>2.0.1.GA</version>
+			<version>2.1.1.GA</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.jboss.seam</groupId>
@@ -78,7 +78,7 @@
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-ui</artifactId>
-			<version>2.0.1.GA</version>
+			<version>2.1.1.GA</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-beanutils</groupId>
