persistence.xml fix
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4538 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/ipbx/build.xml
+++ b/sip-servlets-seam/ipbx/build.xml
@@ -45,7 +45,7 @@
     	<copy todir="${target.dir}/WEB-INF/classes">
     		<fileset dir="src/main" includes="*"></fileset>
     	</copy>
-    	<copy todir="${target.dir}/WEB-INF/classes/META-INF">
+    	<copy todir="${target.dir}/META-INF">
     		<fileset dir="src/main/META-INF" includes="*"></fileset>
     	</copy>
     	
