Polishing a bit the UI, update ant build to Seam 2.1.1.GA, smarter hangup and call
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4543 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/ipbx/WebContent/WEB-INF/web.xml
+++ b/sip-servlets-seam/ipbx/WebContent/WEB-INF/web.xml
@@ -45,6 +45,12 @@
     <param-name>facelets.DEVELOPMENT</param-name>
     <param-value>true</param-value>
   </context-param>
+  
+  <!-- This here is performance killer, need to add it because of login/logout problems -->
+  <context-param>
+     <param-name>facelets.BUILD_BEFORE_RESTORE</param-name>
+     <param-value>true</param-value>
+ </context-param> 
   <context-param>
     <param-name>javax.faces.DEFAULT_SUFFIX</param-name>
     <param-value>.xhtml</param-value>
