--- a/sip-servlets-seam/demo/pom.xml
+++ b/sip-servlets-seam/demo/pom.xml
@@ -1,35 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
 	<modelVersion>4.0.0</modelVersion>
-
 	<groupId>org.mobicents.seam</groupId>
-
 	<artifactId>sip-servlets-seam-demo</artifactId>
-
 	<version>1.0</version>
-
 	<name>Sip Servlets Seam Demo Project</name>
-
 	<packaging>war</packaging>
-
 	<repositories>
-
 		<repository>
-
 			<id>repository.jboss.org</id>
-
 			<name>JBoss Repository</name>
-
 			<url>http://repository.jboss.org/maven2</url>
-
 		</repository>
-
 	</repositories>
 	<properties>
-		<seam.version>2.1.0.CR1</seam.version>
+		<seam.version>2.1.1.GA</seam.version>
 	</properties>
 	<build>
 		<plugins>
@@ -47,14 +33,14 @@
 				<version>2.1-alpha-1</version>
 				<configuration>
 					<warSourceExcludes>
-						**/xml-api*.jar,**/jackrab*.jar,**/xerces*.jar,**/hibernate*.jar,**/persist*.jar,**/dom4*.jar,**/*logging*.jar,**/*javassist*.jar,**/*collection*.jar,**/*asm-*.jar,**/*el-api*.jar,**/*jta-*.jar,**/*jboss-common-core-*.jar,**/*cglib-*.jar,**/*ehcache-*.jar
+						**/junit*.jar,**/ant-*.jar,**/jsf-api*,**/xml-api*.jar,**/jackrab*.jar,**/xerces*.jar,**/hibernate*.jar,**/persist*.jar,**/dom4*.jar,**/*logging*.jar,**/*javassist*.jar,**/*collection*.jar,**/*asm-*.jar,**/*el-api*.jar,**/*jta-*.jar,**/*jboss-common-core-*.jar,**/*cglib-*.jar,**/*log4j*,**/*ehcache-*.jar 
 					</warSourceExcludes>
 				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-eclipse-plugin</artifactId>
-   				<groupId>org.mobicents.tools</groupId>
-    			<version>1.0.0.BETA2</version>
+				<groupId>org.mobicents.tools</groupId>
+				<version>1.0.0.BETA2</version>
 				<inherited>false</inherited>
 				<executions />
 				<configuration>
@@ -65,7 +51,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -73,115 +58,97 @@
 			<version>3.0.0.GA</version>
 			<scope>compile</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-annotations</artifactId>
 			<version>3.3.0.ga</version>
 			<scope>compile</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>3.3.1.ga</version>
 			<scope>compile</scope>
 		</dependency><!--	 -->
-
 		<dependency>
 			<groupId>org.richfaces.ui</groupId>
 			<artifactId>richfaces-ui</artifactId>
 			<version>3.2.2.SR1</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.sun.facelets</groupId>
 			<artifactId>jsf-facelets</artifactId>
 			<version>1.1.14</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam</artifactId>
 			<version>${seam.version}</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.mobicents.seam</groupId>
 			<artifactId>sip-servlets-seam-entrypoint</artifactId>
 			<version>1.0</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-ioc</artifactId>
 			<version>${seam.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-debug</artifactId>
 			<version>${seam.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-mail</artifactId>
 			<version>${seam.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
 			<version>1.1.7</version>
 			<scope>provided</scope>
 		</dependency>
-		
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-pdf</artifactId>
 			<version>${seam.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>ejb3-persistence</artifactId>
 			<version>1.0.2.GA</version>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-ui</artifactId>
 			<version>${seam.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-remoting</artifactId>
 			<version>${seam.version}</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.jbpm.jbpm3</groupId>
 			<artifactId>jbpm-jpdl</artifactId>
 			<version>3.3.0.GA</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.jbpm.jbpm3</groupId>
 			<artifactId>jbpm-identity</artifactId>
 			<version>3.3.0.GA</version>
 		</dependency>
 	</dependencies>
-
 	<profiles>
 		<profile>
 			<id>deploy</id>
@@ -215,4 +182,3 @@
 		</profile>
 	</profiles>
 </project>
-
