--- a/sip-servlets-seam/ipbx/WebContent/WEB-INF/web.xml
+++ b/sip-servlets-seam/ipbx/WebContent/WEB-INF/web.xml
@@ -46,11 +46,11 @@
     <param-value>true</param-value>
   </context-param>
   
-  <!-- This here is performance killer, need to add it because of login/logout problems -->
+  <!-- This here is performance killer, need to add it because of login/logout problems 
   <context-param>
      <param-name>facelets.BUILD_BEFORE_RESTORE</param-name>
      <param-value>true</param-value>
- </context-param> 
+ </context-param> -->
   <context-param>
     <param-name>javax.faces.DEFAULT_SUFFIX</param-name>
     <param-value>.xhtml</param-value>
