Adding the REGISTRAR to the pbx
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4606 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/ipbx/build.xml
+++ b/sip-servlets-seam/ipbx/build.xml
@@ -18,6 +18,7 @@
     	</fileset>
     	<pathelement location="${target.dir}/WEB-INF/classes"/>
     </path>
+	<target name="all" depends="clean, build, deploy"/>
     <target name="init" depends="dependencies">
     	<mkdir dir="${target.dir}/WEB-INF/lib"/>
         <mkdir dir="WebContent/WEB-INF/classes"/>
@@ -25,6 +26,8 @@
     </target>
     <target name="clean">
         <delete dir="WebContent/WEB-INF/classes"/>
+    	<delete dir="${target.dir}"/>
+    	<delete dir="${maven.deps}"/>
     </target>
     <target depends="clean" name="cleanall"/>
     <target depends="build-project" name="build"/>
