--- a/sip-servlets-test-suite/testsuite/src/test/resources/org/mobicents/servlet/sip/testsuite/proxy/simple-sip-servlet-dar.properties
+++ b/sip-servlets-test-suite/testsuite/src/test/resources/org/mobicents/servlet/sip/testsuite/proxy/simple-sip-servlet-dar.properties
@@ -1,1 +1,4 @@
-INVITE: ("org.mobicents.servlet.sip.testsuite.ProxyApplication", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0")
+REGISTER:("org.mobicents.servlet.sip.testsuite.ProxyApplication", "DAR\:From", "ORIGINATING", "", "NO_ROUTE", "0")
+PUBLISH:("org.mobicents.servlet.sip.testsuite.ProxyApplication", "DAR\:From", "ORIGINATING", "", "NO_ROUTE", "0")
+SUBSCRIBE:("org.mobicents.servlet.sip.testsuite.ProxyApplication", "DAR\:From", "ORIGINATING", "", "NO_ROUTE", "0")
+INVITE:("org.mobicents.servlet.sip.testsuite.ProxyApplication", "DAR\:From", "ORIGINATING", "", "NO_ROUTE", "0")
