Adding instructions how to build with ant and JBoss Tools or JBDS
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4614 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/ipbx/build.xml
+++ b/sip-servlets-seam/ipbx/build.xml
@@ -71,5 +71,11 @@
     		<fileset dir="${maven.deps}" 
     			includes="jboss-seam* drools* richfaces* mvel* jboss-el* jboss-el* commons-beanutils* commons-digest* antlr-run* mobicents-media-server-msc-api-local-impl* jsf-facelet* jxl* jbpm* sip-servlets-seam*"></fileset>
     	</copy>
+		<!-- Copy the dependencies to the folder where JB Tools expects them to be -->
+		<mkdir dir="WebContent/WEB-INF/lib"/>
+		<copy todir="WebContent/WEB-INF/lib">
+		    <fileset dir="${maven.deps}" 
+		    	includes="jboss-seam* drools* richfaces* mvel* jboss-el* jboss-el* commons-beanutils* commons-digest* antlr-run* mobicents-media-server-msc-api-local-impl* jsf-facelet* jxl* jbpm* sip-servlets-seam*"></fileset>
+		</copy>
 	</target>
 </project>
