change to the eclipse project name
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4676 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/diameter-openims/.project
+++ b/sip-servlets-examples/diameter-openims/.project
@@ -1,5 +1,5 @@
 <projectDescription>
-  <name>diameter-event-charging</name>
+  <name>diameter-openims</name>
   <comment/>
   <projects/>
   <buildSpec>
