updating conf directory for diameter openims
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4694 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/diameter-openims/conf/open-ims/hss.properties
+++ b/sip-servlets-examples/diameter-openims/conf/open-ims/hss.properties
@@ -1,4 +1,4 @@
-# FOKUS HSS Properties file
+# FOKUS HSS Properties file : File present in /opt/OpenIMSCore/FHoSS/deploy
 #------------------------------------------------------------------------------------------------------------------------------------
 
 
