Upgrading to mobicents parent 9
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4698 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-pbx/pom.xml
+++ b/sip-servlets-pbx/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>mobicents</artifactId>
 		<groupId>org.mobicents</groupId>
-		<version>9-SNAPSHOT</version>
+		<version>9</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.pbx</groupId>
