--- a/jopr-plugin/pom.xml
+++ b/jopr-plugin/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
         <artifactId>mobicents</artifactId>
         <groupId>org.mobicents</groupId>
-        <version>9-SNAPSHOT</version>
+        <version>9</version>
     </parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>jopr-mobicents-sip-servlets-plugin</artifactId>
