cleaning up the release path
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4700 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -43,7 +43,7 @@
 	
 	<!-- Release target -->
 	
-	<target name="release" depends="release-tomcat,release-jboss,release-jboss-5,make-src-zip,clean" />
+	<target name="release" depends="clean,release-tomcat,release-jboss,release-jboss-5,make-src-zip,clean" />
 	
 	<!-- Tomcat version -->
 	
@@ -407,6 +407,7 @@
 	<target name="clean">
 		<delete dir="${jboss.home}" />
 		<delete dir="${tomcat.home}" />
+		<delete di="${release.path}"/>
 	</target>
 	
 	<!-- Download and dependency building -->
