Doco update for coming up 0.8 release and release script update to showcase JB5 as Tech preview in the zip name
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4735 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -372,7 +372,7 @@
 	
 	<target name="make-final-zip-jboss-5" depends="set-time-stamp">
 		<fixcrlf srcdir="${jboss-5.home}/bin" includes="*.sh" eol="lf" eof="remove" />
-		<zip destfile="${base.path}/mss-${mss.release.version}-jboss-${jboss-5.version}-${time.stamp}.zip" filesonly="false">
+		<zip destfile="${base.path}/mss-${mss.release.version}-jboss-${jboss-5.version}-${time.stamp}-TECH-PREVIEW.zip" filesonly="false">
 			<zipfileset dir="${jboss-5.home}/bin" filemode="755" prefix="bin">
 				<include name="*.sh" />
 			</zipfileset>
